feat(PMS-173): Modify request, response for blueprint endpoint (#20)
Co-authored-by: Nguyễn Nhật Huy <nguyennhathuy.orit@gmail.com>
Co-authored-by: Huy XPS <huybui479@gmail.com>